# weather-exporter

./: .env.example  .gitignore  .release.yml  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  RELEASING.md  compose.yml  docker-compose.yml  prometheus.yml
.github/: dependabot.yml
.github/workflows/: build.yml  security.yml
scripts/: release.ps1  release.sh
src/: builder.rs  config.rs  main.rs
